--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://zaumreit.github.io/life
+url: http://zaumreit.github.io//github
 title: ZAUMREIT
 subtitle: 
 author: BAI Jianfei
